--- a/meme-generator/src/App.css
+++ b/meme-generator/src/App.css
@@ -1,3 +1,4 @@
+/* =======HEADER====== */
 
 .header {
   display: flex;
@@ -21,4 +22,34 @@
 .header--project {
   font-size: 0.75rem;
   font-weight: 500;
+}
+
+/* =======MAIN==== */
+
+
+.form {
+  display: grid;
+  grid-template: 40px 40px / 1fr 1fr;
+  gap: 17px;
+}
+
+.form--input {
+  font-family: "Karla", sans-serif;
+  border-radius: 5px;
+  border: 1px solid #D5D4D8;
+  text-indent: 5px;
+}
+
+.form--button {
+  grid-column: 1 / -1;
+  font-family: "Karla", sans-serif;
+  border-radius: 5px;
+  background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.meme--image {
+  max-width: 100%;
 }
