--- a/meme-generator/src/App.css
+++ b/meme-generator/src/App.css
@@ -36,7 +36,7 @@
 .form--input {
   font-family: "Karla", sans-serif;
   border-radius: 5px;
-  border: 1px solid #D5D4D8;
+  border: 1px solid  #D5D4D8;
   text-indent: 5px;
 }
 
@@ -55,3 +55,42 @@
   border-radius: 3px;
   
 }
+.meme {
+  position: relative;
+}
+
+/* =======TEXT ON IMAGE====TOP/BOTTOM */
+
+.meme--top,.meme--bottom{
+  position: absolute;
+  width: 80%;
+  text-align: center;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 15px 0;
+  padding: 0 5px;
+  font-family: impact, sans-serif;
+  font-size: 2em;
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: 1px;
+  text-shadow:
+      2px 2px 0 #000,
+      -2px -2px 0 #000,
+      2px -2px 0 #000,
+      -2px 2px 0 #000,
+      0 2px 0 #000,
+      2px 0 0 #000,
+      0 -2px 0 #000,
+      -2px 0 0 #000,
+      2px 2px 5px #000;
+}
+
+.meme--bottom {
+  bottom: 0;
+}
+
+.meme--top {
+  top: 0;
+}
+/* meme--text */
